--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
 
 @font-face {
     font-family: "Zain";
-    src: url('../zain/Zain-ExtraLight.ttf') format('truetype');
+    src: url('/zain/Zain-ExtraLight.ttf') format('truetype');
     font-weight: 200;
   }
   
   @font-face {
     font-family: "Zain";
-    src: url('../zain/Zain-Light.ttf') format('truetype');
+    src: url('/zain/Zain-Light.ttf') format('truetype');
     font-weight: 300;
   }
   
   @font-face {
     font-family: "Zain";
-    src: url('../zain/Zain-Regular.ttf') format('truetype');
+    src: url('/zain/Zain-Regular.ttf') format('truetype');
     font-weight: 400;
   }
   
@@ -32,7 +32,7 @@
   
   @font-face {
     font-family: "Zain";
-    src: url('../zain/Zain-Black.ttf') format('truetype');
+    src: url('/zain/Zain-Black.ttf') format('truetype');
     font-weight: 900;
   }
  
